--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>UNO</groupId>
   <artifactId>UNO</artifactId>
   <packaging>jar</packaging>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>alpha</version>
   <name>UNO</name>
   <build>
   <plugins>
