--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
       <artifactId>maven-assembly-plugin</artifactId>
       <configuration>
         <descriptorRefs>
-          <descriptorRef>jar</descriptorRef>
+          <descriptorRef>jar-with-dependencies</descriptorRef>
         </descriptorRefs>
         <archive>
           <manifest>
