--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@
 /target/classes
 /target/archive-tmp
 /target/generated-sources
-/target/maven-archiver
+/target/maven-status
 /target/maven-archiver
